--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -33,7 +33,6 @@
 /*=============================
 	1. Google Fonts
 ===============================*/
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700&family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 /*=============================
 	01. Variable CSS
@@ -81,7 +80,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: var(--tg-body-font-family);
+  font-family: var(--tg-heading-font-family);
   font-weight: var(--tg-body-font-weight);
   font-size: var(--tg-body-font-size);
   line-height: var(--tg-body-line-height);
@@ -1871,20 +1870,50 @@ h6 {
   );
   display: none;
 }
+.chart-wrap {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+  gap: 1rem;
+}
 
 .chart-wrap .chart {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
   justify-content: center;
+  width: 50%;
 }
 
+.chart-wrap .chart #doughnutChart {
+  width: 100%;
+  height: 500px;
+}
+
+.chart-wrap .chart p {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  color: var(--tg-white);
+}
 .chart-tab {
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-top: 2rem;
 }
 
+@media (max-width: 800px) {
+  .chart-wrap {
+    flex-direction: column;
+  }
+  .chart-wrap .chart {
+    width: 100%;
+  }
+  .chart-wrap .chart #doughnutChart {
+    height: 300px;
+  }
+}
 .chart-tab .nav-tabs {
   border-bottom: none;
   display: inline-flex;
@@ -1908,10 +1937,11 @@ h6 {
   background: var(--tg-white);
   color: #010314;
 }
+
 .chart-list .list-wrap {
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 15px 0;
 }
 .chart-list .list-wrap li {
@@ -1919,7 +1949,7 @@ h6 {
   font-size: 16px;
   font-weight: 500;
   letter-spacing: 0.48px;
-  width: 50%;
+  width: 100%;
   position: relative;
   padding-left: 30px;
   text-decoration: none;
@@ -2091,72 +2121,72 @@ h6 {
   height: 100%;
   background: linear-gradient(
     0deg,
-    var(--tg-primary-color) 0%,
+    var(--tg-black-alt) 0%,
     var(--tg-black) 91.23%
   );
   z-index: -1;
 }
 .team-item {
   text-align: center;
+  cursor: pointer;
+  margin: 0 10px;
 }
 .team-thumb {
-  /* position: relative; */
+  position: relative;
   margin-bottom: 15px;
 }
 .team-thumb img {
-  width: 100%;
-  height: 300px;
+  height: 210px;
   object-fit: cover;
   object-position: top;
-  border-radius: 5px;
-  position: relative;
 }
+@media (max-width: 800px) {
+  .team-thumb img {
+    height: auto;
+  }
+}
+
 .team-thumb .social-links {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 1rem;
+  z-index: 99;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 30px;
+  opacity: 0;
+  visibility: hidden;
+  transition: all ease-in-out 200ms;
 }
-.team-social {
+
+.team-thumb .social-links .team-social {
   width: 32px;
   height: 32px;
   display: flex;
   align-items: center;
   justify-content: center;
   background: var(--tg-white);
+  color: var(--tg-black);
   border-radius: 50%;
   font-size: 15px;
 }
-.team-social:hover {
-  background: var(--tg-primary-color);
+.team-thumb .social-links .team-social:hover {
+  background: var(--tg-black);
   color: var(--tg-white);
 }
-.flex-bottom {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  width: 100%;
+.team-item:hover > .team-thumb .social-links {
+  opacity: 1;
+  visibility: visible;
 }
-.flex-bottom .social-links {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.team-content {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  text-align: left;
-}
-
 .team-content .title {
   font-size: 22px;
+  margin-bottom: 5px;
 }
-.team-content p {
+.team-content span {
   line-height: 1.3;
   display: block;
-  font-size: 14px;
-  font-weight: 500;
+  font-size: 12px;
   color: #cbd0d4;
 }
 
