--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -40,8 +40,8 @@
 :root {
   --tg-body-font-family: "Outfit", sans-serif;
   --tg-heading-font-family: "Plus Jakarta Sans", sans-serif;
-  --tg-primary-color: #d63384;
-  --tg-secondary-color: #0f101e;
+  --tg-primary-color: rgba(253, 73, 92, 1);
+  --tg-secondary-color: #141214;
   --tg-body-font-color: #92939e;
   --tg-heading-font-color: #ffffff;
   --tg-paragraph-color: #92939e;
@@ -61,8 +61,8 @@
   --tg-teal: #20c997;
   --tg-cyan: #0dcaf0;
   --tg-white: #ffffff;
-  --tg-black: #341a68;
-  --tg-black-alt: #27154b;
+  --tg-black: #141214;
+  --tg-black-alt: #0a090a;
   --tg-gray: #93b2c8;
   --facebook: #3b5998;
   --twitter: #00acee;
@@ -488,9 +488,9 @@ label {
   display: flex;
   align-items: center;
   background: inherit;
-  color: var(--tg-pink);
+  color: var(--tg-primary-color);
   padding: 10px 33px;
-  border: 1px solid var(--tg-pink);
+  border: 1px solid var(--tg-primary-color);
   border-radius: 30px;
 }
 
@@ -499,7 +499,7 @@ label {
   text-transform: uppercase;
   display: flex;
   align-items: center;
-  background: var(--tg-pink);
+  background: var(--tg-primary-color);
   color: var(--tg-white);
   padding: 10px 33px;
   border-radius: 30px;
@@ -507,7 +507,7 @@ label {
 
 .header-action .header-login a:hover,
 .header-action .header-signup a:hover {
-  background: var(--tg-pink);
+  background: var(--tg-primary-color);
   color: var(--tg-white);
 }
 .header-action .header-login a:hover i {
@@ -519,14 +519,14 @@ label {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: var(--tg-pink);
+  background: var(--tg-primary-color);
   color: var(--tg-white);
   border-radius: 50%;
   font-size: 16px;
 }
 .offcanvas-menu .menu-tigger:hover {
   background: var(--tg-white);
-  color: var(--tg-pink);
+  color: var(--tg-primary-color);
 }
 .navbar-wrap ul li .sub-menu {
   position: absolute;
@@ -1407,7 +1407,11 @@ label {
   top: 0;
   width: 18%;
   height: 100%;
-  background: linear-gradient(90deg, #010314 0%, rgba(1, 3, 20, 0) 100%);
+  background: linear-gradient(
+    90deg,
+    var(--tg-black-alt) 0%,
+    rgba(1, 3, 20, 0) 100%
+  );
   z-index: 5;
 }
 .brand-item-wrap::after {
@@ -1444,7 +1448,7 @@ label {
   background: linear-gradient(
     180deg,
     var(--tg-white) 0%,
-    var(--tg-purple) 100%
+    var(--tg-primary-color) 100%
   );
   background-clip: text;
   -webkit-background-clip: text;
@@ -1483,7 +1487,7 @@ label {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(214, 51, 132, 0.1);
+  background-color: rgba(253, 73, 92, 0.1);
   color: var(--tg-primary-color);
 }
 .features-img i {
@@ -1513,7 +1517,7 @@ label {
   gap: 20rem;
   background: linear-gradient(
     270deg,
-    rgb(214, 51, 132, 0.2) 0%,
+    rgba(253, 73, 92, 0.2) 0%,
     var(--tg-black) 99.23%
   );
 }
@@ -1739,7 +1743,7 @@ h6 {
 }
 
 .feat-card .feat-icon {
-  background: rgb(214, 51, 132, 0.2);
+  background: rgba(253, 73, 92, 0.1);
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -2156,14 +2160,10 @@ h6 {
   margin-bottom: 15px;
 }
 .team-thumb img {
-  height: 210px;
-  object-fit: cover;
+  height: auto;
+  width: 100%;
+  object-fit: 100% 100%;
   object-position: top;
-}
-@media (max-width: 800px) {
-  .team-thumb img {
-    height: auto;
-  }
 }
 
 .team-thumb .social-links {
