--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1587,10 +1587,13 @@ h2 {
   padding: 10px 1rem;
   width: fit-content;
 }
+.text-lg {
+  font-size: 20px;
+}
 
 .spunky_sale .second-section {
-  border: 2px solid var(--tg-primary-color);
-  border-radius: 1rem;
+  /* border: 2px solid var(--tg-primary-color);
+  border-radius: 1rem; */
   padding: 1.5rem 1.5rem 3.5rem 1.5rem;
   width: 100%;
   display: flex;
