--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -624,7 +624,8 @@
     margin: 0;
   }
   .footer-bg {
-    margin: -50px 0 0;
+    margin: -10px 0 0;
+    padding: 60px 0 0;
   }
   .banner-bg {
     margin: 0;
