--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -363,6 +363,9 @@ label {
 .scroll-top {
   width: 35px;
   height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   line-height: 35px;
   position: fixed;
   bottom: -10%;
