--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -968,12 +968,7 @@ label {
   top: 0px;
   width: 100%;
   height: 100%;
-  background: linear-gradient(
-    0deg,
-    var(--tg-primary-color) 0%,
-    var(--tg-black) 47.6%,
-    transparent 65.23%
-  );
+  background: linear-gradient(0deg,rgb(34 1 4 / 80%) 0,var(--tg-black) 47.6%,transparent 65.23%);
   z-index: -1;
   border-radius: 0px 0px 20px 20px;
 }
@@ -3303,11 +3298,7 @@ h6 {
   top: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(
-    0deg,
-    var(--tg-primary-color) 0%,
-    var(--tg-black) 65.23%
-  );
+  background: linear-gradient(0deg,rgb(34 1 4 / 80%) 0,var(--tg-black) 47.6%,transparent 65.23%);
   z-index: -2;
   transform: rotate(180deg);
 }
